# handler/fixed_records.go
@@ -55,12 +55,15 @@ func (p *fixedRecordsHandler) Get(w http.ResponseWriter, r *http.Request) {
 		EmotionLevel:     userFixedRecordModel.EmotionLevel,
 		Locations: funk.Map(userFixedRecordModel.Locations, func(location model.UserFixedRecordLocation) viewmodel.StayedLocationViewModel {
 			return viewmodel.StayedLocationViewModel{
-				Name:      location.Name,
-				Latitude:  location.Latitude,
-				Longitude: location.Longitude,
-				Pictures:  location.Pictures,
-				StartTime: location.StartTime,
-				EndTime:   location.EndTime,
+				Name:         location.Name,
+				Latitude:     location.Latitude,
+				Longitude:    location.Longitude,
+				Pictures:     location.Pictures,
+				StartTime:    location.StartTime,
+				EndTime:      location.EndTime,
+				Message:      location.Message,
+				EmotionType:  location.EmotionType,
+				EmotionLevel: location.EmotionLevel,
 			}
 		}).([]viewmodel.StayedLocationViewModel),
 		LastRecommendedAt: userFixedRecordModel.LastRecommendedAt,
@@ -107,12 +110,15 @@ func (p *fixedRecordsHandler) GetAll(w http.ResponseWriter, r *http.Request) {
 			EmotionLevel:     userFixedRecordModel.EmotionLevel,
 			Locations: funk.Map(userFixedRecordModel.Locations, func(location model.UserFixedRecordLocation) viewmodel.StayedLocationViewModel {
 				return viewmodel.StayedLocationViewModel{
-					Name:      location.Name,
-					Latitude:  location.Latitude,
-					Longitude: location.Longitude,
-					Pictures:  location.Pictures,
-					StartTime: location.StartTime,
-					EndTime:   location.EndTime,
+					Name:         location.Name,
+					Latitude:     location.Latitude,
+					Longitude:    location.Longitude,
+					Pictures:     location.Pictures,
+					StartTime:    location.StartTime,
+					EndTime:      location.EndTime,
+					Message:      location.Message,
+					EmotionType:  location.EmotionType,
+					EmotionLevel: location.EmotionLevel,
 				}
 			}).([]viewmodel.StayedLocationViewModel),
 			LastRecommendedAt: userFixedRecordModel.LastRecommendedAt,
@@ -151,12 +157,15 @@ func (p *fixedRecordsHandler) Update(w http.ResponseWriter, r *http.Request) {
 		EmotionLevel:     fixedRecordViewModel.EmotionLevel,
 		Locations: funk.Map(fixedRecordViewModel.Locations, func(location viewmodel.StayedLocationViewModel) model.UserFixedRecordLocation {
 			return model.UserFixedRecordLocation{
-				Name:      location.Name,
-				Latitude:  location.Latitude,
-				Longitude: location.Longitude,
-				Pictures:  location.Pictures,
-				StartTime: location.StartTime,
-				EndTime:   location.EndTime,
+				Name:         location.Name,
+				Latitude:     location.Latitude,
+				Longitude:    location.Longitude,
+				Pictures:     location.Pictures,
+				StartTime:    location.StartTime,
+				EndTime:      location.EndTime,
+				Message:      location.Message,
+				EmotionType:  location.EmotionType,
+				EmotionLevel: location.EmotionLevel,
 			}
 		}).([]model.UserFixedRecordLocation),
 		LastRecommendedAt: fixedRecordViewModel.LastRecommendedAt,
